--- a/make.conf
+++ b/make.conf
@@ -8,9 +8,13 @@ CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 
-MAKEOPTS="-j2"
+# ccacheを使う <- 遅いマシンでコンパイルするの、辞めたい
+# FEATURES="ccache"
+# CCACHE_SIZE="2G"
 
-# 3つまでの並行ジョブを行う
+MAKEOPTS="-j4"
+
+# 2つまでの並行ジョブを行う
 EMERGE_DEFAULT_OPTS="--jobs 2"
 
 # すべてのライセンスをすべてのパッケージに認める
@@ -25,7 +29,9 @@ PKGDIR="/var/cache/binpkgs"
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
 
-USE="-bluetooth"
+# consolekit は lightdm のインストールに必要、systemdに切り替える時は、変更する必要がある。 <- 上手く動作しない
+USE="-bluetooth consolekit -elogind -systemd"
+# USE="-bluetooth"
 
 # ビデオカードの選択 https://wiki.gentoo.org/wiki/Xorg/Guide/ja#make.conf
 ## (For mouse, keyboard, and Synaptics touchpad support)
